// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileNumber #render() when at a specific point when the hexagon is east-west orientation returns the svg for the tile 1`] = `
<text
  fill="black"
  fontSize={8}
  textAnchor="start"
  x={5}
  y={6}
>
  54
</text>
`;

exports[`TileNumber #render() when at a specific point when the hexagon is north-south orientation returns the svg for the tile 1`] = `
<text
  fill="black"
  fontSize={8}
  textAnchor="end"
  x={96}
  y={108.85125168440814}
>
  54
</text>
`;

exports[`TileNumber #render() when at a specific point when the point is at the tile center returns the svg for the tile 1`] = `
<text
  fill="black"
  fontSize={8}
  textAnchor="middle"
  x={55.42562584220407}
  y={64}
>
  54
</text>
`;

exports[`TileNumber #render() when not providing a rotation number returns the svg for the tile 1`] = `
<text
  fill="black"
  fontSize={8}
  textAnchor="end"
  x={109.85125168440814}
  y={94}
>
  54
</text>
`;

exports[`TileNumber #render() when providing a rotation number returns the svg for the tile 1`] = `
<text
  fill="black"
  fontSize={8}
  textAnchor="end"
  x={109.85125168440814}
  y={94}
>
  54.2
</text>
`;
